# gtk-app

./: Cargo.toml  build.rs
.cargo/: config.toml
data/: gschemas.compiled  org.gtk_rs.Settings.gschema.xml  org.gtk_rs.Settings1.gschema.xml
data/resources/: resources.gresource  resources.gresource.xml  window.ui
src/: main.rs  style.css
src/CustomButton/: imp.rs  mod.rs
src/custom_button/: imp.rs  mod.rs
src/custom_window/: imp.rs  mod.rs
src/task_row/: mod.rs
src/window/: imp.rs  mod.rs
