[package]
name = "my-gtk-app"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
async-channel = "2.3.1"
env = "1.0.1"
gio = "0.20.12"
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_12"] }
object = "0.37.1"
once_cell = "1.21.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = "1.45.1"
glib = "0.18"
